# graph-rag-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Sample tickets.md  classifier.py  database.py  docker-compose.yml  interface.py  models.py  nginx.conf  pyproject.toml  rag.py  rag_app.py  requirements.txt  setup_neo4j_docker.bat  ticket_manager.py  un.txt
build_KB/: ingest_pipeline.py
scripts/: run.sh  run_hf.sh  setup_just_neo4j.bat
